--- a/css/module_Ping.css
+++ b/css/module_Ping.css
@@ -55,6 +55,7 @@ main {
     box-shadow: 0px 0px 16px 0px rgba(0,0,0,0.75),
     inset 0px -10px 16px 1px rgba(101, 2, 2, 0.582);
     font-weight: bold;
+    cursor: pointer;
 }
 
 #flags {
