--- a/doc/maquettes/css/default.css
+++ b/doc/maquettes/css/default.css
@@ -20,12 +20,17 @@ nav {
     inset 0px -10px 16px 1px rgba(7, 2, 101, 0.25);
 }
 nav #logo {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50% , -50%);
     height: 75%;
     width: auto;
-    position: relative;
-    left: 50%;
-    top: 50%;
-    transform: translate(-50% , -50%);
+}
+
+#logo_img {
+    height: 100%;
+    width: auto;
 }
 
 main {
@@ -102,6 +107,7 @@ a {
 }
 
 footer {
+    z-index: 1;
     position: fixed;
     bottom: 0;
     width: 100%;
